testdata/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: testdata
  labels:
    app: testdata
spec:
    replicas: 1
    selector:
      matchLabels:
        app: testdata-pod
    template:
      metadata:
        labels:
          app: testdata-pod
          project: banking
      spec:
        containers:
        - name: testdata
          image: k3d-banking-registry:5000/banking-testdata:local
          ports:
          - containerPort: 3000
