testdata/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: testdata-ingress
  annotations:
    ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: testdata-service
                port:
                  number: 3000
