testdata/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: testdata
  name: testdata-service
spec:
  ports:
  - port: 80
    targetPort: 3000
    appProtocol: http
  selector:
    app: testdata-pod
  type: ClusterIP
